{
  "version": 4,
  "terraform_version": "1.13.3",
  "serial": 14,
  "lineage": "05b309f3-a2cf-8a84-e242-5af1667d7275",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "levelup-gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:104398007503:internet-gateway/igw-0060c9595def74003",
            "id": "igw-0060c9595def74003",
            "owner_id": "104398007503",
            "region": "us-east-1",
            "tags": {
              "Name": "levelup-gw"
            },
            "tags_all": {
              "Name": "levelup-gw"
            },
            "vpc_id": "vpc-004d0cc42318ae5d4"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.levelupvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "levelup-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:104398007503:route-table/rtb-0631c833563de2968",
            "id": "rtb-0631c833563de2968",
            "owner_id": "104398007503",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0060c9595def74003",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "levelup-public-1"
            },
            "tags_all": {
              "Name": "levelup-public-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-004d0cc42318ae5d4"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "104398007503",
            "id": "rtb-0631c833563de2968",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.levelup-gw",
            "aws_vpc.levelupvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow-levelup-ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:104398007503:security-group/sg-0f713fd637ca8ffdd",
            "description": "security group that allows ssh connection",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f713fd637ca8ffdd",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "allow-levelup-ssh",
            "name_prefix": "",
            "owner_id": "104398007503",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow-levelup-ssh"
            },
            "tags_all": {
              "Name": "allow-levelup-ssh"
            },
            "timeouts": null,
            "vpc_id": "vpc-004d0cc42318ae5d4"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "104398007503",
            "id": "sg-0f713fd637ca8ffdd",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.levelupvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow-mariadb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "status": "tainted",
          "schema_version": 1,
          "attributes": {
            "arn": null,
            "description": "security group for mariadb",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b193cba40deb2571",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-0f713fd637ca8ffdd"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "allow-mariadb",
            "name_prefix": null,
            "owner_id": null,
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow-mariadb"
            },
            "tags_all": {
              "Name": "allow-mariadb"
            },
            "timeouts": null,
            "vpc_id": "vpc-004d0cc42318ae5d4"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.allow-levelup-ssh",
            "aws_vpc.levelupvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "levelupvpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:104398007503:vpc/vpc-004d0cc42318ae5d4",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0794ce3b9184507e1",
            "default_route_table_id": "rtb-03bbb305866456caa",
            "default_security_group_id": "sg-0eb853d4e2bd83880",
            "dhcp_options_id": "dopt-0cc6d18ca1e4f3013",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-004d0cc42318ae5d4",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-03bbb305866456caa",
            "owner_id": "104398007503",
            "region": "us-east-1",
            "tags": {
              "Name": "levelupvpc"
            },
            "tags_all": {
              "Name": "levelupvpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "104398007503",
            "id": "vpc-004d0cc42318ae5d4",
            "region": "us-east-1"
          }
        }
      ]
    }
  ]
}